Fix simulation links - use Thinking-Experiment-Sims organization URLs and add Half Atwood Machine

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                         Create multiple wave sources and observe how they interact in real-time.
                     </p>
                     <div class="sim-links">
-                        <a href="https://vladimirlopez.github.io/ripple-lab-studio/" class="btn btn-primary" target="_blank">
+                        <a href="https://thinking-experiment-sims.github.io/ripple-lab-studio/" class="btn btn-primary" target="_blank">
                             Launch Simulation
                         </a>
-                        <a href="https://github.com/vladimirlopez/ripple-lab-studio" class="btn btn-secondary" target="_blank">
+                        <a href="https://github.com/Thinking-Experiment-Sims/ripple-lab-studio" class="btn btn-secondary" target="_blank">
                             View Code
                         </a>
                     </div>
@@ -91,10 +91,10 @@
                         Adjust tube length and observe standing wave patterns to calculate wave properties.
                     </p>
                     <div class="sim-links">
-                        <a href="https://vladimirlopez.github.io/speed-of-sound-lab-sim/" class="btn btn-primary" target="_blank">
+                        <a href="https://thinking-experiment-sims.github.io/speed-of-sound-lab-sim/" class="btn btn-primary" target="_blank">
                             Launch Simulation
                         </a>
-                        <a href="https://github.com/vladimirlopez/speed-of-sound-lab-sim" class="btn btn-secondary" target="_blank">
+                        <a href="https://github.com/Thinking-Experiment-Sims/speed-of-sound-lab-sim" class="btn btn-secondary" target="_blank">
                             View Code
                         </a>
                     </div>
@@ -111,10 +111,10 @@
                         Explore acceleration, velocity, and forces in one-dimensional motion with varying thrust.
                     </p>
                     <div class="sim-links">
-                        <a href="https://vladimirlopez.github.io/rocket-sled-simulation/" class="btn btn-primary" target="_blank">
+                        <a href="https://thinking-experiment-sims.github.io/rocket-sled-simulation/" class="btn btn-primary" target="_blank">
                             Launch Simulation
                         </a>
-                        <a href="https://github.com/vladimirlopez/rocket-sled-simulation" class="btn btn-secondary" target="_blank">
+                        <a href="https://github.com/Thinking-Experiment-Sims/rocket-sled-simulation" class="btn btn-secondary" target="_blank">
                             View Code
                         </a>
                     </div>
@@ -131,10 +131,30 @@
                         acceleration and velocity can point in opposite directions. Watch the system slow down, stop, and reverse!
                     </p>
                     <div class="sim-links">
-                        <a href="https://vladimirlopez.github.io/atwood-machine-simulation/" class="btn btn-primary" target="_blank">
+                        <a href="https://thinking-experiment-sims.github.io/atwood-machine-simulation/" class="btn btn-primary" target="_blank">
                             Launch Simulation
                         </a>
-                        <a href="https://github.com/vladimirlopez/atwood-machine-simulation" class="btn btn-secondary" target="_blank">
+                        <a href="https://github.com/Thinking-Experiment-Sims/atwood-machine-simulation" class="btn btn-secondary" target="_blank">
+                            View Code
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Half Atwood Machine -->
+                <div class="sim-card">
+                    <div class="sim-header">
+                        <h2>Half Atwood Machine</h2>
+                        <span class="category">Mechanics</span>
+                    </div>
+                    <p class="description">
+                        A mass hanging over a pulley connected to another mass on a frictionless horizontal surface. 
+                        Explore the relationship between tension, acceleration, and mass ratios in this asymmetric system.
+                    </p>
+                    <div class="sim-links">
+                        <a href="https://thinking-experiment-sims.github.io/half-atwood-sim/" class="btn btn-primary" target="_blank">
+                            Launch Simulation
+                        </a>
+                        <a href="https://github.com/Thinking-Experiment-Sims/half-atwood-sim" class="btn btn-secondary" target="_blank">
                             View Code
                         </a>
                     </div>
@@ -151,10 +171,10 @@
                         Explore how mass determines stellar evolution pathways and final fates.
                     </p>
                     <div class="sim-links">
-                        <a href="https://vladimirlopez.github.io/stellar-evolution-simulation/" class="btn btn-primary" target="_blank">
+                        <a href="https://thinking-experiment-sims.github.io/stellar-evolution-simulation/" class="btn btn-primary" target="_blank">
                             Launch Simulation
                         </a>
-                        <a href="https://github.com/vladimirlopez/stellar-evolution-simulation" class="btn btn-secondary" target="_blank">
+                        <a href="https://github.com/Thinking-Experiment-Sims/stellar-evolution-simulation" class="btn btn-secondary" target="_blank">
                             View Code
                         </a>
                     </div>
