Add custom light theme that maintains card layout

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         const themeIcon = document.getElementById('theme-icon');
         
         const DARK_THEME = 'https://cdn.jsdelivr.net/gh/vladimirlopez/shared-simulation-style-system@main/themes/dark-refraction-theme.css';
-        const LIGHT_THEME = 'https://cdn.jsdelivr.net/gh/vladimirlopez/shared-simulation-style-system@main/themes/light-half-atwood-theme.css';
+        const LIGHT_THEME = 'light-theme.css';
         
         // Load saved theme preference
         const savedTheme = localStorage.getItem('physics-sims-theme') || 'dark';
